--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 
     <script>
 
-    //--------Armstrong Number
+    	//--------Armstrong Number
 
-    // let a=parseInt(prompt("Enter a Number"));
-    // let sum=0;
-    // let ans=a;
-	// while(a>0){
-	// 	var rem=a%10;
-	// 	var b=rem*rem*rem;
-	// 	a=(a-rem)/10;
-	// 	sum += b;
-	// }
-	// if(ans==sum){
-	// console.log(sum);
-	// console.log("Armstrong");
-	// }
-	// else{
-	// console.log(sum);
-	// console.log("Not Armstrong");
-	// }
+		var a=parseInt(prompt("Enter a Number"));
+		var sum=0;
+		var ans=a;
+		while(a>0){
+			var rem=a%10;
+			var b=rem*rem*rem;
+				a=(a-rem)/10;
+				sum +=b;
+		}
+		if(ans==sum){
+		console.log(sum);
+		console.log("armstrong")
+		}
+		else{
+		console.log(sum);
+		console.log("Not armstrong")
+		}
 
     </script>
     
